tests/cases/standard-library/ok/vec/std-vec-push-in.ari
fn main() -> i64 {
  var zone = zone::create(256);
  var vec = std::vec::new<i64>(ref mut zone, 0);

  vec.push_in(ref mut zone, 4);
  vec.push_in(ref mut zone, 6);
  vec.push_in(ref mut zone, 8);

  let total = vec.len() + vec.capacity() + vec.get(0) + vec.get(1) + vec.get(2);
  zone::destroy(zone);
  return total;
}
