tests/cases/standard-library/errors/collections/std-collections-tree-set-iter-after-reset.ari
fn main() -> i64 {
  var zone = zone::create(256);
  var set = TreeSet::with_less<i64>(ref mut zone, 1, collections::less_i64);
  set.insert(ref mut zone, 1);
  var cursor = set.iter();
  zone::reset(ref mut zone);
  let value = cursor.next();

  zone::destroy(zone);
  return 0;
}
